--- a/frpc.ini
+++ b/frpc.ini
@@ -1,6 +1,8 @@
 [common]
 server_addr = x.x.x.x
 server_port = 7001
+authentication_method = token
+token = 5A2P8L7B&U*MDrSf!jmfHgkSzxcF66bj%kEKXNWa@s&TQK76iUHGgXBVoEmXtmWKgBu
 
 [ssh]
 type = tcp
