--- a/frps.ini
+++ b/frps.ini
@@ -1,2 +1,4 @@
 [common]
 bind_port = 7001
+authentication_method = token
+token = 5A2P8L7B&U*MDrSf!jmfHgkSzxcF66bj%kEKXNWa@s&TQK76iUHGgXBVoEmXtmWKgBu
